# bigc

./: .gitignore  README.md
bigc/: .gitignore  CMakeLists.txt
bigc/src/: AccessNode.cpp  AccessNode.h  Allocated.cpp  Allocated.h  ArgumentIterator.cpp  ArgumentIterator.h  Array.cpp  Array.h  BranchNode.cpp  BranchNode.h  CallNode.cpp  CallNode.h  ClassDefinition.cpp  ClassDefinition.h  ClassDefinitionInterface.cpp  ClassDefinitionInterface.h  ClassNode.cpp  ClassNode.h  CollectNode.cpp  CollectNode.h  Control.cpp  Control.h  Expression.h  FunctionNode.cpp  FunctionNode.h  FundamentalClassDefinition.cpp  FundamentalClassDefinition.h  FundamentalFunctionNode.cpp  FundamentalFunctionNode.h  FundamentalMethodNode.cpp  FundamentalMethodNode.h  FundamentalObject.cpp  FundamentalObject.h  GroupNode.cpp  GroupNode.h  Hashable.cpp  Hashable.h  IdentifierNode.cpp  IdentifierNode.h  IndexNode.cpp  (+74 more)
bigc/src/Libraries/: GeneralFunction.cpp  GeneralFunction.h
bigc/src/Libraries/File/: FileFundamentalClass.cpp  FileFundamentalClass.h  FileFundamentalMethodNode.cpp  FileFundamentalMethodNode.h  FileFundamentalObject.cpp  FileFundamentalObject.h  FileLibrary.cpp  FileLibrary.h  FileOperations.cpp  FileOperations.h
bigc/src/Libraries/Math/: ExponentiateFunction.cpp  ExponentiateFunction.h  GeneralMathFunction.cpp  GeneralMathFunction.h  MathLibrary.cpp  MathLibrary.h  SqrtFunction.cpp  SqrtFunction.h  TrigFunctions.cpp  TrigFunctions.h
bigc/src/Libraries/Net/: NetLibrary.cpp  NetLibrary.h  SocketFundamentalClass.cpp  SocketFundamentalClass.h  SocketFundamentalMethodNode.cpp  (+5 more)
(+19 files in other folders)
